# OM1-video-processor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
data/embeds/arc-trt-l2-512/: index.json  stats.json  vectors.f32
mediamtx/: Dockerfile  supervisord.conf
video_processor/: supervisord.conf
