[project]
name = "om1-video-processor"
version = "1.0.0"
description = "OM Video Processor"
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "om1-modules @ git+https://github.com/OpenMind/om1-modules.git@513d48a907c380e2723b1194268fac0f15bae00b",
    "pycuda (>=2025.1.2,<2026.0.0)",
]
