[project]
name = "om1-video-processor"
version = "1.0.0"
description = "OM Video Processor"
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "om1-modules @ git+https://github.com/OpenMind/om1-modules.git@c502b03a90e17769e597f15b3625b865335d56bf",
    "pycuda (>=2025.1.2,<2026.0.0)",
]
