[project]
name = "om1-video-processor"
version = "1.0.0"
description = "OM Video Processor"
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "om1-modules @ git+https://github.com/OpenMind/om1-modules.git@7e98f67c9bd48d0e122ac8a1fca069c034e2584b",
    "pycuda (>=2025.1.2,<2026.0.0)",
]
